# emotion

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  COPYING.opensmile  Dockerfile.audeep  IS13_IS09_func.conf  LICENSE  MANIFEST.in  README.md  logmel.conf  logmel_IS09_func.conf  pyproject.toml  requirements-dev.txt  requirements-opt.txt  requirements.txt  setup.cfg  setup.py  test.py
.devcontainer/: devcontainer.json  install.sh
conf/mapping/: eesc_joy_happiness.yaml  emodb_binary_arousal.yaml  emodb_binary_valence.yaml  emov-db_amusement_happiness.yaml  iemocap_excitement_happiness.yaml  smartkom.yaml
conf/select/: 3class.yaml  demos_prot_neutral.yaml  iemocap_4class.yaml  iemocap_test.yaml  iemocap_train.yaml  iemocap_valid.yaml  mesd_adult.yaml  msp-podcast_8class.yaml
config/: GeMAPS_lld.conf  IS13_ComParE_lld.conf  eGeMAPS_lld.conf  logmel.conf  mfcc_log_energy.conf
config/include/: GeMAPSv01a_core.func.conf.inc  IS13_ComParE_core.func.conf.inc  IS13_ComParE_core.lld.conf.inc  arff_output.conf.inc  logmel_lld.conf.inc
crema-d/: preprocess.py
datasets/: README.md  metadata_schema.json
datasets/AESDD/: corpus.yaml  process.py
datasets/ASED/: corpus.yaml  process.py
datasets/BAVED/: corpus.yaml
datasets/CMU-MOSEI/: corpus.yaml  process.py  splits.py
datasets/CREMA-D/: corpus.yaml  process.py
datasets/CaFE/: corpus.yaml  process.py
datasets/DEMoS/: corpus.yaml  process.py
datasets/EESC/: corpus.yaml  process.py
datasets/EMO-DB/: corpus.yaml  process.py  process_transcripts.py
datasets/EMOVO/: corpus.yaml  process.py
datasets/ESD/: corpus.yaml  process.py
datasets/EmoFilm/: corpus.yaml  process.py
datasets/EmoV-DB/: corpus.yaml  process.py
datasets/EmoryNLP/: corpus.yaml  process.py
datasets/IEMOCAP/: corpus.yaml  process.py  process_transcripts.py
datasets/JL/: corpus.yaml  process.py
datasets/MELD/: corpus.yaml  process.py
datasets/MESD/: corpus.yaml  process.py
datasets/MESS/: corpus.yaml
datasets/MOSEI/: corpus.yaml
datasets/MSP-IMPROV/: corpus.yaml  process.py
datasets/MSP-PODCAST/: corpus.yaml  process.py
datasets/Oréau/: corpus.yaml  process.py
datasets/Portuguese/: corpus.yaml  process.py
datasets/RAVDESS/: corpus.yaml  process.py
datasets/SAVEE/: corpus.yaml  process.py
datasets/SEMAINE/: process.py
datasets/SUBESCO/: corpus.yaml  process.py
datasets/ShEMO/: corpus.yaml  process.py
datasets/SmartKom/: corpus.yaml  process.py
datasets/TESS/: corpus.yaml  process.py
datasets/URDU/: corpus.yaml  process.py
datasets/VENEC/: corpus.yaml  process.py
datasets/VIVAE/: corpus.yaml
datasets/cafe/: process.py
datasets/crema-d/: preprocess.py  process.py
datasets/demos/: process.py
datasets/eNTERFACE/: corpus.yaml  process.py
datasets/emodb/: process.py  process_transcripts.py
datasets/emofilm/: process.py
datasets/enterface/: process.py
datasets/iemocap/: process.py  process_transcripts.py
datasets/jl/: process.py
datasets/msp-improv/: preprocess.py  process.py
datasets/msp-podcast/: process.py
datasets/portuguese/: process.py
datasets/ravdess/: process.py
datasets/savee/: process.py
datasets/semaine/: extract_turns.py  preprocess.py  process.py
datasets/shemo/: process.py
datasets/smartkom/: preprocess.py  process.py
datasets/tess/: process.py
datasets/urdu/: process.py
datasets/venec/: process.py
docs/: Makefile  cli_ref.rst  conf.py  datasets.rst  experiments.rst  genindex.rst  index.rst  installation.rst  processors.rst  requirements.txt
docs/api/: cli.rst  config.rst  dataset.rst  preprocessing.rst  pytorch.rst  sklearn.rst  tensorflow.rst  train.rst  utils.rst
emodb/: process_transcripts.py
emorec/: __init__.py  classification.py  stats.py  utils.py
emorec/dataset/: __init__.py  annotation.py  backend.py  binary_arff.py  corpora.py  dataset.py  features.py  utils.py
emorec/sklearn/: classification.py  models.py
emorec/tensorflow/: __init__.py  classification.py  dataset.py  utils.py
emotion_recognition/: classification.py  corpora.py  dataset.py  stats.py  utils.py
emotion_recognition/dataset/: dataset.py  utils.py
emotion_recognition/tensorflow/: classification.py  dataset.py  utils.py
ertk/: __init__.py  classification.py  stats.py  utils.py
ertk/dataset/: __init__.py  annotation.py  dataset.py  features.py  utils.py
ertk/extraction/: __init__.py  spectrogram.py
ertk/sklearn/: classification.py
ertk/tensorflow/: classification.py  utils.py
examples/: .gitignore  CREMA-D.yaml  EMO-DB.yaml  RAVDESS.yaml  README.md  exp_loco.yaml  extract_features.sh  run_exps.sh  zhao2019.yaml
iemocap/: preprocess.py  process_transcripts.py
msp-improv/: preprocess.py
opensmile/: GeMAPS.conf  GeMAPS_lld.conf  IS13_IS09_func.conf  eGeMAPS.conf  eGeMAPS_lld.conf  logmel.conf  logmel_IS09_func.conf  mfcc_log_energy.conf
opensmile/include/: arff_output.conf.inc
papers/: README.md
papers/alta2020/: README.md  run_all.sh  run_experiment.py  run_experiments.sh  run_preprocessing.sh
papers/interspeech2021/: README.md  acoustic.sh  audeep.sh  boaw.sh  deepspectrum.sh  display_results.ipynb  embeddings.sh  extract_features.sh  run_experiments.sh
scripts/: aldeneh.py  aldeneh2017.py  arff_to_bin.py  audeep.py  combine_spectrograms.py  comparative.py  comparative.sh  concat_arff.py  create_tf_record.py  env.sh  extract_spectrograms.py  generate_class_labels.py  latif.py  preprocess_iemocap.py  preprocess_msp-improv.py  process.py  rbm.py  rbm_test.py  rename_iemocap.sh  rename_msp-improv.sh  rnn_autoencoder.py  test.py  trigeorgis.py  view_results.py
scripts/analysis/: annotation_stats.py  dataset_info.py  groups.py  view_instance.py
scripts/batch/: audeep_export.sh  audeep_spectrograms.sh  comparative.sh  extract_spectrograms.sh
scripts/emotion_recognition/: binary_arff.py  classification.py  corpora.py  dataset.py  stats.py
scripts/inference/: classify_audio.py  filter_pred.py
scripts/models/: aldeneh2017.py  (+3 more)
smartkom/: preprocess.py
tests/: README.md  constants.py  test_config.py  test_dataset.py
(+387 files in other folders)
