[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
extend_skip = ["third_party"]

[tool.black]
target-version = ["py38"]

[tool.pyright]
include = ["src", "scripts", "datasets/*", "tests"]
exclude = ["**/__pycache__", "third_party", ".git"]
pythonVersion = "3.8"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    'ignore:.*pkg_resources\.declare_namespace.*:DeprecationWarning',
]
addopts = ["--cov=src/ertk", "--cov-report=term-missing", "--cov-report=lcov"]

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
files = ["src", "scripts", "tests"]

[tool.coverage.run]
omit = [
    "src/ertk/tensorflow/models/*",
    "src/ertk/pytorch/models/*",
    "src/ertk/preprocessing/audioset/_vggish/*",
    "src/ertk/preprocessing/audioset/_yamnet/*",
    "src/ertk/cli/_utils.py",
]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
skip_empty = true
