[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
extend_skip = ["third_party"]

[tool.black]
target-version = ["py39"]

[tool.pyright]
include = ["src", "scripts", "datasets/*", "tests"]
exclude = ["**/__pycache__", "third_party", ".git"]
pythonVersion = "3.9"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    'ignore:.*pkg_resources\.declare_namespace.*:DeprecationWarning',
    'ignore:.*Jupyter is migrating.*:DeprecationWarning',
    "ignore:'(aifc|audioop|sunau)' is deprecated:DeprecationWarning",
]
addopts = [
    "--cov=src/ertk",
    "--cov-report=term-missing",
    "--cov-report=xml:cov.xml",
]

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
files = ["src", "scripts", "tests"]
python_version = "3.9"

[tool.coverage.run]
omit = [
    "src/ertk/tensorflow/models/*",
    "src/ertk/pytorch/models/*",
    "src/ertk/preprocessing/audioset/_vggish/*",
    "src/ertk/preprocessing/audioset/_yamnet/*",
    "src/ertk/cli/_utils.py",
    "src/**/__main__.py",
]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
skip_empty = true
exclude_also = [
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "click\\.echo",
]
