[metadata]
name = ertk
description = Tools for analysing emotion recognition models and processing datasets.
author = Aaron Keesing
author_email = akee511@aucklanduni.ac.nz
version = attr: ertk.__version__
url = https://github.com/Strong-AI-Lab/emotion
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
install_requires =
    audioread >= 3.0.0
    click >= 8.0.0
    click-option-group
    fairseq >= 1.0.0a0
    joblib
    liac-arff
    librosa
    matplotlib >= 3.0.0
    netCDF4
    numpy
    opensmile >= 2.4.0
    Orange3
    pandas >= 1.0.0
    resampy >= 0.4.0
    seaborn
    scikit-learn
    scipy
    soundfile
    statsmodels
    tensorflow >= 2.3.0
    tf-slim
    torch
    tqdm
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ertk-cli = ertk.cli.cli:cli
    ertk-dataset = ertk.cli.dataset:cli
    ertk-util = ertk.cli.util:cli
