[metadata]
name = ertk
description = Tools for process emotion recognition datasets, extracting features, and running experiments.
author = Aaron Keesing
author_email = akee511@aucklanduni.ac.nz
version = attr: ertk.__version__
url = https://github.com/Strong-AI-Lab/emotion
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
install_requires =
    click >= 8.0.0
    click-option-group
    joblib
    liac-arff
    librosa
    matplotlib >= 3.0.0
    netCDF4
    numpy
    omegaconf
    pandas >= 1.4.0
    pytorch_lightning
    seaborn
    scikit-learn
    scipy
    soundfile
    statsmodels
    tensorflow >= 2.3.0
    torch
    tqdm
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ertk-cli = ertk.cli.cli:cli
    ertk-dataset = ertk.cli.dataset:cli
    ertk-util = ertk.cli.util:cli
ertk.processors =
    encodec = ertk.preprocessing.encodec:EncodecExtractor
    fairseq = ertk.preprocessing.fairseq:FairseqExtractor
    huggingface = ertk.preprocessing.huggingface:HuggingFaceExtractor
    keras_apps = ertk.preprocessing.keras_apps:KerasAppsExtractor
    kmeans = ertk.preprocessing.kmeans:KMeansExtractor
    opensmile = ertk.preprocessing.opensmile:OpenSMILEExtractor
    openxbow = ertk.preprocessing.openxbow:OpenXBOWExtractor
    phonemize = ertk.preprocessing.phonemize:Phonemizer
    resample = ertk.preprocessing.resample:Resampler
    spectrogram = ertk.preprocessing.spectrogram:SpectrogramExtractor
    speechbrain = ertk.preprocessing.speechbrain:SpeechBrainExtractor
    vad_trim = ertk.preprocessing.vad_trim:VADTrimmer
    vggish = ertk.preprocessing.audioset:VGGishExtractor
    yamnet = ertk.preprocessing.audioset:YAMNetExtractor

[options.extras_require]
encodec =
    encodec
opensmile =
    opensmile >= 2.4.0
fairseq =
    fairseq @ git+https://github.com/pytorch/fairseq.git@ae59bd6d04871f6174351ad46c90992e1dca7ac7
huggingface =
    transformers
keras_apps =
    keras_applications
    keras_preprocessing
speechbrain =
    speechbrain
audioset =
    tf-slim
resample =
    resampy >= 0.4.0
all-preprocessors =
    %(audioset)s
    %(encodec)s
    %(opensmile)s
    %(fairseq)s
    %(huggingface)s
    %(keras_apps)s
    %(speechbrain)s
    %(audioset)s
    %(resample)s
